--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.camino.data">
+    package="com.camino.rxdagger.data">
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
