started first steps with dagger2

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,15 +2,6 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-   /* compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }*/
 
     defaultPublishConfig "debug"
 
@@ -58,7 +49,12 @@ android {
 }
 
 dependencies {
-   /* compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'*/
+    apt domainDependencies.daggerCompiler
+    provided domainDependencies.javaxAnnotation
+    compile domainDependencies.dagger
+    compile domainDependencies.okHttp
+    compile domainDependencies.gson
+    compile domainDependencies.rxJava
+    compile domainDependencies.rxAndroid
+    compile domainDependencies.retrofit
 }
