--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -14,13 +14,13 @@ ext {
     //Libraries
     daggerVersion = '2.0.2'
     butterKnifeVersion = '7.0.1'
-    //recyclerViewVersion = '21.0.3'
     rxJavaVersion = '1.0.14'
     rxAndroidVersion = '1.0.1'
     javaxAnnotationVersion = '1.0'
-    gsonVersion = '2.6'
-    retrofitVersion = '1.9.0'
-    okHttpVersion = '2.5.0'
+    gsonVersion = '2.6.1'
+    retrofitVersion = '2.0.0-beta4'
+    //compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    okHttpVersion = '3.1.2'
     androidAnnotationsVersion = '21.0.3'
     androidSupportVersion = '23.1.1'
 
@@ -28,26 +28,42 @@ ext {
     leakCanaryVersion = '1.3.1'
 
     presentationDependencies = [
-            daggerCompiler  : "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger          : "com.google.dagger:dagger:${daggerVersion}",
-            butterKnife     : "com.jakewharton:butterknife:${butterKnifeVersion}",
-            recyclerView    : "com.android.support:recyclerview-v7:${androidSupportVersion}",
-            rxJava          : "io.reactivex:rxjava:${rxJavaVersion}",
-            rxAndroid       : "io.reactivex:rxandroid:${rxAndroidVersion}",
-            javaxAnnotation : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            supportAppCompat: "com.android.support:appcompat-v7:${androidSupportVersion}",
-            supportDesign   : "com.android.support:design:${androidSupportVersion}",
+            daggerCompiler       : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            dagger               : "com.google.dagger:dagger:${daggerVersion}",
+            butterKnife          : "com.jakewharton:butterknife:${butterKnifeVersion}",
+            recyclerView         : "com.android.support:recyclerview-v7:${androidSupportVersion}",
+            rxJava               : "io.reactivex:rxjava:${rxJavaVersion}",
+            rxAndroid            : "io.reactivex:rxandroid:${rxAndroidVersion}",
+            javaxAnnotation      : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+            supportAppCompat     : "com.android.support:appcompat-v7:${androidSupportVersion}",
+            supportDesign        : "com.android.support:design:${androidSupportVersion}",
+            retrofit             : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+            retrofitGsonConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+            retrofitRxAdapter    : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
+            okHttp               : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+
     ]
 
     dataDependencies = [
             daggerCompiler : "com.google.dagger:dagger-compiler:${daggerVersion}",
             dagger         : "com.google.dagger:dagger:${daggerVersion}",
-            okHttp         : "com.squareup.okhttp:okhttp:${okHttpVersion}",
+            okHttp         : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
             gson           : "com.google.code.gson:gson:${gsonVersion}",
             rxJava         : "io.reactivex:rxjava:${rxJavaVersion}",
             rxAndroid      : "io.reactivex:rxandroid:${rxAndroidVersion}",
             javaxAnnotation: "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            retrofit       : "com.squareup.retrofit:retrofit:${retrofitVersion}",
+            retrofit       : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+    ]
+
+    domainDependencies = [
+            daggerCompiler : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            dagger         : "com.google.dagger:dagger:${daggerVersion}",
+            okHttp         : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+            gson           : "com.google.code.gson:gson:${gsonVersion}",
+            rxJava         : "io.reactivex:rxjava:${rxJavaVersion}",
+            rxAndroid      : "io.reactivex:rxandroid:${rxAndroidVersion}",
+            javaxAnnotation: "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+            retrofit       : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
     ]
 
     developmentDependencies = [
