--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,16 +43,6 @@ android {
         disable 'IconMissingDensityFolder'  //For testing purpose. This is safe to remove.
     }
 
-/*    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
-    defaultConfig {
-        applicationId "com.camino.rxdagger"
-        minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-    }*/
     buildTypes {
         release {
             minifyEnabled false
@@ -62,10 +52,6 @@ android {
 }
 
 dependencies {
-    /*  compile fileTree(dir: 'libs', include: ['*.jar'])
-      testCompile 'junit:junit:4.12'
-      compile 'com.android.support:appcompat-v7:23.1.1'
-      compile 'com.android.support:design:23.1.1'*/
 
     def presentationDependencies = rootProject.ext.presentationDependencies
     def developmentDependencies = rootProject.ext.developmentDependencies
@@ -82,6 +68,10 @@ dependencies {
     provided presentationDependencies.javaxAnnotation
     compile presentationDependencies.supportAppCompat
     compile presentationDependencies.supportDesign
+    compile presentationDependencies.retrofit
+    compile presentationDependencies.retrofitGsonConverter
+    compile presentationDependencies.retrofitRxAdapter
+    compile presentationDependencies.okHttp
 
     //Development
     compile developmentDependencies.leakCanary
