--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.camino.rxdagger.data">
+<manifest package="com.camino.rxdagger.data"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true"
+    <application
+        android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
->
+        android:supportsRtl="true">
 
     </application>
 
