--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -22,6 +22,8 @@ ext {
     okHttpVersion = '3.2.0'
     androidAnnotationsVersion = '21.0.3'
     androidSupportVersion = '23.1.1'
+    circleImageViewVersion = '1.2.0'
+    glideVersion = '3.6.1'
 
     //Development
     leakCanaryVersion = '1.3.1'
@@ -40,6 +42,8 @@ ext {
             retrofitGsonConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
             retrofitRxAdapter    : "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}",
             okHttp               : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+            circleImageView      : "de.hdodenhof:circleimageview:${circleImageViewVersion}",
+            glide                : "com.github.bumptech.glide:glide:${glideVersion}",
 
     ]
 
