--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.camino.rxdagger.presentation.util.glide.GlideConfiguration"
+            android:value="GlideModule"/>
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/app_name"
